issue #22676 fixed - Compare Products counter, and My Wish List counter vertical not aligned

--- a/app/design/frontend/Magento/luma/web/css/source/_extends.less
+++ b/app/design/frontend/Magento/luma/web/css/source/_extends.less
@@ -1533,6 +1533,7 @@
         .lib-css(color, @block-items__counter__color);
         .lib-font-size(12px);
         white-space: nowrap;
+        vertical-align: middle;
 
         &:before {
             content: '(';
@@ -1555,6 +1556,7 @@
         strong {
             font-size: @font-size__l;
             font-weight: @font-weight__light;
+            vertical-align: middle;
         }
     }
 }
